--- a/index.html
+++ b/index.html
@@ -1,77 +1,9 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <title>Aigle Consult – Academic Mobility</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
-
-  <style>
-    :root {
-      --wine-dark: #3a0d0d;
-      --text-dark: #1f2937;
-    }
-
-    * { margin:0; padding:0; box-sizing:border-box; }
-
-    body {
-      font-family: 'Inter', sans-serif;
-      color: var(--text-dark);
-    }
-
-    .container { width:90%; max-width:1100px; margin:auto; }
-
-    header {
-      background: var(--wine-dark);
-      color: white;
-    }
-
-    .nav {
-      display:flex;
-      justify-content:space-between;
-      align-items:center;
-      padding:18px 0;
-    }
-
-    .logo {
-      display: flex;
-      align-items: center;
-      gap: 12px;
-      font-weight: 700;
-      letter-spacing: 1px;
-    }
-
-    .logo img {
-      height: 36px;
-      width: auto;
-    }
-
-    nav a {
-      color:#f3e8e8;
-      margin-left:22px;
-      text-decoration:none;
-      font-weight:500;
-    }
-  </style>
-</head>
-
-<body>
-  <header>
-    <div class="container nav">
-      <div class="logo">
-        <img src="https://raw.githubusercontent.com/Jeankabeya/weblogo/main/logo%20(1).png" alt="Logo">
-        <span>AIGLE CONSULT</span>
-      </div>
-      </nav>
-    </div>
-  </header>
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="fr">
-<head>
 <meta charset="UTF-8">
+<title>Aigle Consult – Academic Mobility</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -244,13 +176,14 @@ footer {
 
 <header>
   <div class="container nav">
-    <div class="logo"</div>
+    <div class="logo">AIGLE CONSULT</div>
     <nav>
       <a href="#about" data-fr="À propos" data-en="About">À propos</a>
       <a href="#services" data-fr="Services" data-en="Services">Services</a>
       <a href="#approach" data-fr="Approche" data-en="Approach">Approche</a>
       <a href="#contact" data-fr="Contact" data-en="Contact">Contact</a>
-      <span class="lang" onclick="setLang('fr')">FR</span>/<spanclass="lang" onclick="setLang('en')">EN</span>
+      <span class="lang" onclick="setLang('fr')">FR</span> |
+      <span class="lang" onclick="setLang('en')">EN</span>
     </nav>
   </div>
 </header>
