--- a/index.html
+++ b/index.html
@@ -36,7 +36,21 @@ header { background: var(--wine-dark); color:white; }
   display:flex; justify-content:space-between; align-items:center;
   padding:18px 0;
 }
-.logo { font-weight:700; letter-spacing:1px; }
+
+.logo {
+  display:flex;
+  align-items:center;
+  gap:12px;
+  font-weight:700;
+  letter-spacing:1px;
+}
+
+.logo img {
+  height:36px;
+  width:auto;
+  display:block;
+}
+
 nav a, .lang {
   color:#f3e8e8; margin-left:22px;
   text-decoration:none; font-weight:500; cursor:pointer;
@@ -48,15 +62,18 @@ nav a, .lang {
   padding:120px 0;
   text-align:center;
 }
+
 .hero h1 {
   font-family:'Playfair Display', serif;
   font-size:44px;
 }
+
 .hero span {
   display:block;
   font-size:26px;
   margin-top:12px;
 }
+
 .hero p {
   max-width:720px;
   margin:25px auto 40px;
@@ -71,10 +88,12 @@ nav a, .lang {
   text-decoration:none;
   border-radius:4px;
 }
+
 .btn-gold { background:var(--gold); color:var(--wine-dark); }
 .btn-outline { border:1px solid var(--gold); color:var(--gold); }
 
 .about { background:white; padding:90px 0; }
+
 .about h2 {
   font-family:'Playfair Display', serif;
   font-size:36px;
@@ -120,6 +139,7 @@ nav a, .lang {
 }
 
 .contact { background:white; padding:100px 0; }
+
 .contact h2 {
   font-family:'Playfair Display', serif;
   font-size:34px;
@@ -176,14 +196,17 @@ footer {
 
 <header>
   <div class="container nav">
-    <div class="logo">AIGLE CONSULT</div>
+    <div class="logo">
+      <img src="https://raw.githubusercontent.com/Jeankabeya/weblogo/main/logo%20(1).png" alt="Aigle Consult Logo">
+      <span>AIGLE CONSULT</span>
+    </div>
     <nav>
       <a href="#about" data-fr="À propos" data-en="About">À propos</a>
       <a href="#services" data-fr="Services" data-en="Services">Services</a>
       <a href="#approach" data-fr="Approche" data-en="Approach">Approche</a>
       <a href="#contact" data-fr="Contact" data-en="Contact">Contact</a>
-      <span class="lang" onclick="setLang('fr')">FR</span> |
-      <span class="lang" onclick="setLang('en')">EN</span>
+      <span class="lang" onclick="setLang('fr')">FR</span>  
+     / <spanclass="lang" onclick="setLang('en')">EN</span>
     </nav>
   </div>
 </header>
@@ -192,16 +215,12 @@ footer {
   <div class="container">
     <h1>
       AIGLE CONSULT
-      <span
-        data-fr="Mobilité académique & services de partenariat universitaire"
-        data-en="Academic Mobility & University Partnership Services">
-      </span>
+      <span data-fr="Mobilité académique & services de partenariat universitaire"
+            data-en="Academic Mobility & University Partnership Services"></span>
     </h1>
 
-    <p
-      data-fr="Basée à Kinshasa, RDC, nous accompagnons les étudiants dans l’accès à l’enseignement supérieur en Europe."
-      data-en="Based in Kinshasa, DRC, we support students in pursuing higher education opportunities in Europe.">
-    </p>
+    <p data-fr="Basée à Kinshasa, RDC, nous accompagnons les étudiants dans l’accès à l’enseignement supérieur en Europe."
+       data-en="Based in Kinshasa, DRC, we support students in pursuing higher education opportunities in Europe."></p>
 
     <div class="buttons">
       <a href="#services" class="btn-gold" data-fr="Nos services" data-en="Our Services">Nos services</a>
@@ -210,6 +229,7 @@ footer {
   </div>
 </section>
 
+<!-- SERVICES -->
 <section id="services" class="services">
   <div class="container">
     <h2 data-fr="Nos services" data-en="Our Services"></h2>
@@ -218,116 +238,54 @@ footer {
     <div class="service-grid">
       <div class="service">
         <h3 data-fr="Orientation académique" data-en="Academic Guidance"></h3>
-        <p
-          data-fr="Conseils personnalisés pour aider les étudiants à choisir les universités et programmes adaptés à leur profil académique et à leurs objectifs professionnels."
-          data-en="Personalized guidance to help students choose universities and study programs that match their academic background and career goals.">
-        </p>
+        <p data-fr="Conseils personnalisés pour aider les étudiants à choisir les universités et programmes adaptés."
+           data-en="Personalized guidance to help students choose suitable universities and programs."></p>
       </div>
 
       <div class="service gold">
         <h3 data-fr="Assistance aux candidatures" data-en="Application Assistance"></h3>
-        <p
-          data-fr="Accompagnement complet durant tout le processus de candidature, y compris les dossiers universitaires et les procédures administratives."
-          data-en="Full support throughout the application process, including university applications, registration files, and administrative procedures.">
-        </p>
+        <p data-fr="Accompagnement complet durant tout le processus de candidature."
+           data-en="Full support throughout the application process."></p>
       </div>
 
       <div class="service">
-        <h3 data-fr="Pays & universités partenaires" data-en="Partner Countries & Universities"></h3>
-        <p
-          data-fr="Grâce à nos partenariats académiques, nous orientons les étudiants vers des universités en France, Belgique, Grèce, Roumanie et Chypre du Nord."
-          data-en="Through our academic partnerships, we guide students to universities in France, Belgium, Greece, Romania, and Northern Cyprus.">
-        </p>
+        <h3 data-fr="Universités partenaires" data-en="Partner Universities"></h3>
+        <p data-fr="France, Belgique, Grèce, Roumanie et Chypre du Nord."
+           data-en="France, Belgium, Greece, Romania and Northern Cyprus."></p>
       </div>
     </div>
   </div>
 </section>
 
+<!-- ABOUT -->
 <section id="about" class="about">
   <div class="narrow">
     <h2 data-fr="À propos d’Aigle Consult" data-en="About Aigle Consult"></h2>
-    <p
-      data-fr="Aigle Consult est une agence de conseil basée à Kinshasa, RDC. Nous accompagnons les étudiants souhaitant poursuivre leurs études en Europe avec un encadrement professionnel, transparent et efficace."
-      data-en="Aigle Consult is a consulting agency based in Kinshasa, DRC. We support students wishing to pursue their studies in Europe with professional, transparent, and efficient guidance.">
-    </p>
-    <p
-      data-fr="Grâce à nos partenariats avec plusieurs universités européennes, nous facilitons l’accès à des programmes reconnus et aidons les étudiants à concrétiser leurs projets académiques internationaux."
-      data-en="Through our partnerships with several European universities, we facilitate access to recognized programs and help students realize their international academic projects.">
-    </p>
-    <p
-      data-fr="Notre travail repose sur le professionnalisme, la transparence et un engagement fort envers la réussite des étudiants, dans le respect des standards académiques internationaux."
-      data-en="Our work is based on professionalism, transparency, and a strong commitment to student success, while respecting international academic standards.">
-    </p>
+    <p data-fr="Agence basée à Kinshasa, RDC, spécialisée en mobilité académique."
+       data-en="Agency based in Kinshasa, DRC, specialized in academic mobility."></p>
   </div>
 </section>
 
-<section id="approach" class="about">
-  <div class="narrow">
-    <h2 data-fr="Notre approche" data-en="Our Approach"></h2>
-    <p
-      data-fr="Chez Aigle Consult, nous adoptons une approche structurée et éthique de la mobilité académique. Chaque profil étudiant est soigneusement analysé avant toute candidature."
-      data-en="At Aigle Consult, we follow a structured and ethical approach to academic mobility. Each student profile is carefully reviewed before any application is submitted.">
-    </p>
-    <p
-      data-fr="Nous mettons l’accent sur une orientation précise, une documentation conforme et une communication claire afin de garantir le succès académique de chaque étudiant."
-      data-en="We focus on proper guidance, accurate documentation, and clear communication throughout the application process to help students succeed.">
-    </p>
-  </div>
-</section>
-
+<!-- CONTACT -->
 <section id="contact" class="contact">
   <div class="narrow">
     <h2 data-fr="Contact & inscription" data-en="Contact & Registration"></h2>
-    <p
-      data-fr="Si vous souhaitez poursuivre vos études en Europe, veuillez remplir le formulaire ci-dessous et un membre de notre équipe vous contactera."
-      data-en="If you are interested in pursuing your studies in Europe, please complete the form below and a member of our team will contact you.">
-    </p>
-<form action="https://formspree.io/f/mlggrgew" method="POST">
-  <p>
-    <input type="text" name="name" placeholder="Nom complet / Full name" required>
-  </p>
-  <p>
-    <input type="email" name="email" placeholder="Email" required>
-  </p>
-  <p>
-    <input type="text" name="country" placeholder="Pays d'étude souhaité">
-  </p>
-  <p>
-    <textarea name="message" placeholder="Votre message" rows="4" required></textarea>
-  </p>
-  <button type="submit" data-fr="Envoyer la demande" data-en="Submit Request">
-    Envoyer la demande
-  </button>
-</form>
 
-
-
-    <p style="margin-top:30px;">
-  <strong data-fr="Localisation :" data-en="Location:">Localisation :</strong> Kinshasa, RDC<br>
-
-  <strong>E-mail:</strong>
-  <a href="mailto:contact@aigleconsult.net">contact@aigleconsult.net</a><br>
-
-  <strong data-fr="Téléphone :" data-en="Phone:">Téléphone :</strong>
-  <a href="tel:+243827704694">+243 827 704 694</a>
-</p>
+    <form action="https://formspree.io/f/mlggrgew" method="POST">
+      <input type="text" name="name" placeholder="Nom complet" required>
+      <input type="email" name="email" placeholder="Email" required>
+      <textarea name="message" rows="4" placeholder="Message" required></textarea>
+      <button type="submit">Envoyer</button>
+    </form>
   </div>
 </section>
 
 <footer>
-  <span
-    data-fr="© 2026 Aigle Consult – Agence de conseil académique. Enregistrée en République Démocratique du Congo. Tous droits réservés."
-    data-en="© 2026 Aigle Consult – Academic Consulting Agency. Registered in the Democratic Republic of the Congo. All rights reserved.">
-  </span>
+  © 2026 Aigle Consult – Tous droits réservés
 </footer>
 
 <div class="floating">
-  <a href="https://wa.me/243827704694" title="WhatsApp">
-    <i class="fab fa-whatsapp"></i>
-  </a>
-  <a href="https://www.facebook.com/YourPageNameHere" target="_blank" title="Facebook">
-    <i class="fab fa-facebook-f"></i>>
-  </a>
+  <a href="https://wa.me/243827704694"><i class="fab fa-whatsapp"></i></a>
 </div>
 
 <script>
@@ -341,5 +299,3 @@ setLang('fr');
 
 </body>
 </html>
-
-
