--- a/index.html
+++ b/index.html
@@ -46,10 +46,11 @@ header { background: var(--wine-dark); color:white; }
 }
 
 .logo img {
-  height:36px;
+  height:56px;   /* isompi logo */
   width:auto;
   display:block;
 }
+
 
 nav a, .lang {
   color:#f3e8e8; margin-left:22px;
@@ -299,3 +300,4 @@ setLang('fr');
 
 </body>
 </html>
+
