--- a/index.html
+++ b/index.html
@@ -31,16 +31,22 @@ body {
 .container { width:90%; max-width:1100px; margin:auto; }
 .narrow { max-width:760px; margin:auto; text-align:center; }
 
-header { background: var(--wine-dark); color:white; }
+/* HEADER */
+header {
+  background: var(--wine-dark);
+  color:white;
+  height:90px;
+  overflow:hidden;
+}
+
 .nav {
   display:flex;
   justify-content:space-between;
   align-items:center;
-  padding:18px 0;
   height:100%;
 }
 
-
+/* LOGO */
 .logo {
   display:flex;
   align-items:center;
@@ -50,17 +56,21 @@ header { background: var(--wine-dark); color:white; }
 }
 
 .logo img {
-  height: 130px;
-  max-height: 100%;
-  width: auto;
+  height:130px;
+  max-height:100%;
+  width:auto;
 }
 
-
+/* NAV */
 nav a, .lang {
-  color:#f3e8e8; margin-left:22px;
-  text-decoration:none; font-weight:500; cursor:pointer;
+  color:#f3e8e8;
+  margin-left:22px;
+  text-decoration:none;
+  font-weight:500;
+  cursor:pointer;
 }
 
+/* HERO */
 .hero {
   background: linear-gradient(rgba(58,13,13,.9), rgba(58,13,13,.9));
   color:white;
@@ -85,6 +95,7 @@ nav a, .lang {
   font-size:18px;
 }
 
+/* BUTTONS */
 .buttons a {
   display:inline-block;
   padding:14px 32px;
@@ -97,13 +108,8 @@ nav a, .lang {
 .btn-gold { background:var(--gold); color:var(--wine-dark); }
 .btn-outline { border:1px solid var(--gold); color:var(--gold); }
 
+/* SECTIONS */
 .about { background:white; padding:90px 0; }
-
-.about h2 {
-  font-family:'Playfair Display', serif;
-  font-size:36px;
-  margin-bottom:30px;
-}
 
 .services {
   background:var(--bg-soft);
@@ -143,6 +149,7 @@ nav a, .lang {
   margin-bottom:15px;
 }
 
+/* CONTACT */
 .contact { background:white; padding:100px 0; }
 
 .contact h2 {
@@ -166,6 +173,7 @@ form button {
   cursor:pointer;
 }
 
+/* FOOTER */
 footer {
   background:var(--wine-darker);
   color:#e5dcdc;
@@ -174,6 +182,7 @@ footer {
   font-size:14px;
 }
 
+/* FLOATING */
 .floating {
   position:fixed;
   right:20px;
@@ -192,19 +201,13 @@ footer {
   background:var(--wine-dark);
   color:white;
   font-size:18px;
-   box-shadow:0 6px 14px rgba(0,0,0,.25);
-}
-  @media (max-width: 600px) {
-  header {
-    height: 70px;
-  }
-
-  .logo img {
-    height: 80px;
-    transform: none;
-  }
+  box-shadow:0 6px 14px rgba(0,0,0,.25);
 }
 
+/* MOBILE */
+@media (max-width: 600px) {
+  header { height:70px; }
+  .logo img { height:80px; }
 }
 </style>
 </head>
@@ -222,8 +225,8 @@ footer {
       <a href="#services" data-fr="Services" data-en="Services">Services</a>
       <a href="#approach" data-fr="Approche" data-en="Approach">Approche</a>
       <a href="#contact" data-fr="Contact" data-en="Contact">Contact</a>
-      <span class="lang" onclick="setLang('fr')">FR</span>  
-     / <spanclass="lang" onclick="setLang('en')">EN</span>
+      <span class="lang" onclick="setLang('fr')">FR</span> /
+      <span class="lang" onclick="setLang('en')">EN</span>
     </nav>
   </div>
 </header>
@@ -246,7 +249,6 @@ footer {
   </div>
 </section>
 
-<!-- SERVICES -->
 <section id="services" class="services">
   <div class="container">
     <h2 data-fr="Nos services" data-en="Our Services"></h2>
@@ -255,54 +257,78 @@ footer {
     <div class="service-grid">
       <div class="service">
         <h3 data-fr="Orientation académique" data-en="Academic Guidance"></h3>
-        <p data-fr="Conseils personnalisés pour aider les étudiants à choisir les universités et programmes adaptés."
-           data-en="Personalized guidance to help students choose suitable universities and programs."></p>
+        <p data-fr="Conseils personnalisés pour aider les étudiants à choisir les universités et programmes adaptés à leur profil académique et à leurs objectifs professionnels."
+           data-en="Personalized guidance to help students choose universities and study programs that match their academic background and career goals."></p>
       </div>
 
       <div class="service gold">
         <h3 data-fr="Assistance aux candidatures" data-en="Application Assistance"></h3>
-        <p data-fr="Accompagnement complet durant tout le processus de candidature."
-           data-en="Full support throughout the application process."></p>
+        <p data-fr="Accompagnement complet durant tout le processus de candidature, y compris les dossiers universitaires et les procédures administratives."
+           data-en="Full support throughout the application process, including university applications, registration files, and administrative procedures."></p>
       </div>
 
       <div class="service">
-        <h3 data-fr="Universités partenaires" data-en="Partner Universities"></h3>
-        <p data-fr="France, Belgique, Grèce, Roumanie et Chypre du Nord."
-           data-en="France, Belgium, Greece, Romania and Northern Cyprus."></p>
+        <h3 data-fr="Pays & universités partenaires" data-en="Partner Countries & Universities"></h3>
+        <p data-fr="Grâce à nos partenariats académiques, nous orientons les étudiants vers des universités en France, Belgique, Grèce, Roumanie et Chypre du Nord."
+           data-en="Through our academic partnerships, we guide students to universities in France, Belgium, Greece, Romania, and Northern Cyprus."></p>
       </div>
     </div>
   </div>
 </section>
 
-<!-- ABOUT -->
 <section id="about" class="about">
   <div class="narrow">
     <h2 data-fr="À propos d’Aigle Consult" data-en="About Aigle Consult"></h2>
-    <p data-fr="Agence basée à Kinshasa, RDC, spécialisée en mobilité académique."
-       data-en="Agency based in Kinshasa, DRC, specialized in academic mobility."></p>
+    <p data-fr="Aigle Consult est une agence de conseil basée à Kinshasa, RDC. Nous accompagnons les étudiants souhaitant poursuivre leurs études en Europe avec un encadrement professionnel, transparent et efficace."
+       data-en="Aigle Consult is a consulting agency based in Kinshasa, DRC. We support students wishing to pursue their studies in Europe with professional, transparent, and efficient guidance."></p>
+    <p data-fr="Grâce à nos partenariats avec plusieurs universités européennes, nous facilitons l’accès à des programmes reconnus et aidons les étudiants à concrétiser leurs projets académiques internationaux."
+       data-en="Through our partnerships with several European universities, we facilitate access to recognized programs and help students realize their international academic projects."></p>
+    <p data-fr="Notre travail repose sur le professionnalisme, la transparence et un engagement fort envers la réussite des étudiants, dans le respect des standards académiques internationaux."
+       data-en="Our work is based on professionalism, transparency, and a strong commitment to student success, while respecting international academic standards."></p>
   </div>
 </section>
 
-<!-- CONTACT -->
+<section id="approach" class="about">
+  <div class="narrow">
+    <h2 data-fr="Notre approche" data-en="Our Approach"></h2>
+    <p data-fr="Chez Aigle Consult, nous adoptons une approche structurée et éthique de la mobilité académique. Chaque profil étudiant est soigneusement analysé avant toute candidature."
+       data-en="At Aigle Consult, we follow a structured and ethical approach to academic mobility. Each student profile is carefully reviewed before any application is submitted."></p>
+    <p data-fr="Nous mettons l’accent sur une orientation précise, une documentation conforme et une communication claire afin de garantir le succès académique de chaque étudiant."
+       data-en="We focus on proper guidance, accurate documentation, and clear communication throughout the application process to help students succeed."></p>
+  </div>
+</section>
+
 <section id="contact" class="contact">
   <div class="narrow">
     <h2 data-fr="Contact & inscription" data-en="Contact & Registration"></h2>
+    <p data-fr="Si vous souhaitez poursuivre vos études en Europe, veuillez remplir le formulaire ci-dessous et un membre de notre équipe vous contactera."
+       data-en="If you are interested in pursuing your studies in Europe, please complete the form below and a member of our team will contact you."></p>
 
     <form action="https://formspree.io/f/mlggrgew" method="POST">
-      <input type="text" name="name" placeholder="Nom complet" required>
-      <input type="email" name="email" placeholder="Email" required>
-      <textarea name="message" rows="4" placeholder="Message" required></textarea>
-      <button type="submit">Envoyer</button>
+      <p><input type="text" name="name" placeholder="Nom complet / Full name" required></p>
+      <p><input type="email" name="email" placeholder="Email" required></p>
+      <p><input type="text" name="country" placeholder="Pays d'étude souhaité"></p>
+      <p><textarea name="message" placeholder="Votre message" rows="4" required></textarea></p>
+      <button type="submit" data-fr="Envoyer la demande" data-en="Submit Request">Envoyer la demande</button>
     </form>
+
+    <p style="margin-top:30px;">
+      <strong data-fr="Localisation :" data-en="Location:">Localisation :</strong> Kinshasa, RDC<br>
+      <strong>E-mail:</strong> <a href="mailto:contact@aigleconsult.net">contact@aigleconsult.net</a><br>
+      <strong data-fr="Téléphone :" data-en="Phone:">Téléphone :</strong> <a href="tel:+243827704694">+243 827 704 694</a>
+    </p>
   </div>
 </section>
 
 <footer>
-  © 2026 Aigle Consult – Tous droits réservés
+  <span data-fr="© 2026 Aigle Consult – Agence de conseil académique. Enregistrée en République Démocratique du Congo. Tous droits réservés."
+        data-en="© 2026 Aigle Consult – Academic Consulting Agency. Registered in the Democratic Republic of the Congo. All rights reserved.">
+  </span>
 </footer>
 
 <div class="floating">
-  <a href="https://wa.me/243827704694"><i class="fab fa-whatsapp"></i></a>
+  <a href="https://wa.me/243827704694" title="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+  <a href="https://www.facebook.com/YourPageNameHere" target="_blank" title="Facebook"><i class="fab fa-facebook-f"></i></a>
 </div>
 
 <script>
@@ -316,8 +342,3 @@ setLang('fr');
 
 </body>
 </html>
-
-
-
-
-
